@@ -41,8 +41,13 @@ core:
  - new parts:
        UNIX domain socket server implemented
  - changes: 
+    - command line: removed -p port and extended -l:
+       -l [proto:]addr[:port] , where proto=udp|tcp and 
+       addr= host|ip_address|interface_name. The format is the same
+       as for listen in the config file. ipv6 addresses must be enclosed in
+       [].
     - added from_uri & to_uri: behave exactly like uri but use the
-	   "From:"/"To:" uris
+      "From:"/"To:" uris
        (e.g.: if (from_uri==myself) ..., if (to_uri=~"^sip:test@")... )
     - config: better escape support in strings (e.g. \", \<cr>, \x0a, \012)
     - bad network addresses are now automatically fixed
